--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MM
-email:
+title: Daniele Bifolco
+email: d.bifolco@studenti.unisannio.it
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-twitter_username: username
-github_username: username
+twitter_username: @BifolcoDaniele
+github_username: danielebifolco
 minimal_mistakes_skin: default
 search: true
 
@@ -58,16 +58,16 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "First Lastname"
-  avatar : "/assets/images/bio-photo.jpg"
+  name   : "Daniele Bifolco"
+  avatar : "/assets/images/wp.jpg"
   bio    : "My awesome biography constrained to a sentence or two goes here."
   links:
-    - label: "Website"
+    - label: "Unisannio"
       icon: "fas fa-fw fa-link"
-      url: "https://"
+      url: "https://www.unisannio.it/it/users/daniele-bifolco"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+      url: "https://twitter.com/BifolcoDaniele"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/"
